--- a/src/app/contact-list/contact-list.component.html
+++ b/src/app/contact-list/contact-list.component.html
@@ -28,7 +28,7 @@
                         <button class="btn btn-primary" [routerLink]="[contact.id, 'edit']">
                             Editar
                         </button>
-                        <button class="btn btn-danger">
+                        <button class="btn btn-danger" (click)="deleteContact(contact)">
                             Emilinar
                         </button>
                     </div>
